Started second ROW

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 			</div>
 			<!-- Buttons -->
 			<div class="row">
-				<div class="center">
+				<div class="center-button">
 					<button type="button" class="btn btn-primary wolas"> Comienza acá </button>
 					<button type="button" class="btn btn-success"> Success </button>
 				</div>	
@@ -57,6 +57,14 @@
 		</div>
 	</div>
 	
+	<div class="row">
+		<div class="container center-text">
+			<h4> EL BOOTCAMP DE PROGRAMACIÓN MÁS GRANDE DE LATINOAMÉRICA </h4>
+			<div class="col-md-10 col-sm-10 offset-md-1 offset-sm-1">
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
+			</div>
+		</div>		
+	</div>
 
 
 	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
