--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 	<!-- Banner -->
-	<div class="jumbotron banner">
+	<div class="jumbotron jumbotron-fluid banner">
 		<div class="container">	
 			<nav class="navbar navbar-expand-lg navbar-light">
 				<!-- Brand -->
@@ -57,6 +57,7 @@
 		</div>
 	</div>
 	
+	<!-- Second Section -->
 	<div class="row">
 		<div class="container center-text">
 			<h4> EL BOOTCAMP DE PROGRAMACIÓN MÁS GRANDE DE LATINOAMÉRICA </h4>
@@ -65,7 +66,56 @@
 			</div>
 		</div>		
 	</div>
+	<div class="row">
+		<div class="container center-text">
+				<div class="col-md-10 col-sm-10 offset-md-1 offset-sm-1">
+					<img src="images/bg22.jpeg" alt="" width=500 height=500 class="img-fluid space">
+				</div>
+			</div>
+		</div>
+	</div>
 
+	<!-- Third Section -->
+	<div class="jumbotron jumbotron-fluid third-section-color border-section" style="background-color: #f7f8fc">
+		<div class="row">
+			<div class="container center-text">
+				<h4> SOLICITA INFORMACIÓN E INSCRÍBETE </h4>
+				<div class="col-md-10 col-sm-10 offset-md-1 offset-sm-1">
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
+					<a class="btn btn-primary btn-lg" href="#" role="button">Inscribete</a>
+					<p class="space"> Vive la experiencia Desafio Latam! </p>
+				</div>
+			</div>		
+		</div>
+	</div>
+
+	<!-- Fourth Section -->
+	<div class="row space-two">
+		<div class="col-md-3 col-sm-3 offset-md-3 offset-sm-3">
+			<h5>Contacto</h5>
+			<p><strong>Desafio Latam</strong><br>Ezequias Alliende 2361<br>P: +569 5117 7975</p>
+			<a href="http://www.gmail.com" target="_blank">inscripciones@desafiolatam.com</a>
+		</div>
+		<div class="col-md-3 col-sm-3">
+			<h5>Suscribete</h5>
+			<p>Lorem asidasdnas ask adjka sdaksdkaksd kas</p>
+			<div class="input-group mb-3">
+  				<input type="text" class="form-control" placeholder="Ingresa tu email.." aria-label="Recipient's username" aria-describedby="basic-addon2">
+  				<div class="input-group-append">
+    				<button class="btn btn-outline-secondary" type="button">Enviar</button>
+  				</div>
+			</div>
+		</div>
+	</div>	
+	
+	<!-- Fifth Section -->
+	<div class="row">
+		<div class="col footer">
+			<div class="container">
+				<h5>DESAFIO LATAM 2018 - CURSO FULLSTACK G14</h5>
+			</div>
+		</div>	
+	</div>	
 
 	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
