--- a/index.html
+++ b/index.html
@@ -68,12 +68,38 @@
 	</div>
 	<div class="row">
 		<div class="container center-text">
-				<div class="col-md-10 col-sm-10 offset-md-1 offset-sm-1">
-					<img src="images/bg22.jpeg" alt="" width=500 height=500 class="img-fluid space">
+			<div class="col-md-10 col-sm-10 offset-md-1 offset-sm-1">
+				<!-- Carousel -->
+				<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+					<ol class="carousel-indicators">
+						<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+						<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+						<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+					</ol>
+					<div class="carousel-inner">
+						<div class="carousel-item active">
+							<img class="d-block w-100" src="images/first-pic.jpg" alt="First slide">
+						</div>
+						<div class="carousel-item">
+							<img class="d-block w-100" src="images/second-pic.jpg" alt="Second slide">
+						</div>
+						<div class="carousel-item">
+							<img class="d-block w-100" src="images/third-pic.jpg" alt="Third slide">
+						</div>
+					</div>
+					<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+						<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+						<span class="sr-only">Previous</span>
+					</a>
+					<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+						<span class="carousel-control-next-icon" aria-hidden="true"></span>
+						<span class="sr-only">Next</span>
+					</a>
 				</div>
 			</div>
 		</div>
 	</div>
+
 
 	<!-- Third Section -->
 	<div class="jumbotron jumbotron-fluid third-section-color border-section" style="background-color: #f7f8fc">
