ADD: Fixed Footer and width troubles

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 			<div class="row">
 				<div class="center-button">
 					<button type="button" class="btn btn-primary wolas"> Comienza acá </button>
-					<button type="button" class="btn btn-success"> Success </button>
+					<button type="button" class="btn btn-success"> Más info </button>
 				</div>	
 			</div>	
 			<div class="row banner-info">
@@ -58,16 +58,16 @@
 	</div>
 	
 	<!-- Second Section -->
-	<div class="row">
-		<div class="container center-text">
-			<h4> EL BOOTCAMP DE PROGRAMACIÓN MÁS GRANDE DE LATINOAMÉRICA </h4>
-			<div class="col-md-10 col-sm-10 offset-md-1 offset-sm-1">
+	<div class="container center-text">
+		<div class="row">
+			<div class="col">
+				<h4> EL BOOTCAMP DE PROGRAMACIÓN MÁS GRANDE DE LATINOAMÉRICA </h4>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
 			</div>
 		</div>		
-	</div>
+	
 	<div class="row">
-		<div class="container center-text">
+		
 			<div class="col-md-10 col-sm-10 offset-md-1 offset-sm-1">
 				<!-- Carousel -->
 				<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
@@ -98,15 +98,16 @@
 				</div>
 			</div>
 		</div>
+
 	</div>
 
 
 	<!-- Third Section -->
 	<div class="jumbotron jumbotron-fluid third-section-color border-section" style="background-color: #f7f8fc">
-		<div class="row">
-			<div class="container center-text">
-				<h4> SOLICITA INFORMACIÓN E INSCRÍBETE </h4>
+		<div class="container center-text">
+			<div class="row">
 				<div class="col-md-10 col-sm-10 offset-md-1 offset-sm-1">
+					<h4> SOLICITA INFORMACIÓN E INSCRÍBETE </h4>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
 					<a class="btn btn-primary btn-lg" href="#" role="button">Inscribete</a>
 					<p class="space"> Vive la experiencia Desafio Latam! </p>
@@ -116,32 +117,32 @@
 	</div>
 
 	<!-- Fourth Section -->
-	<div class="row space-two">
-		<div class="col-md-3 col-sm-3 offset-md-3 offset-sm-3">
-			<h5>Contacto</h5>
-			<p><strong>Desafio Latam</strong><br>Ezequias Alliende 2361<br>P: +569 5117 7975</p>
-			<a href="http://www.gmail.com" target="_blank">inscripciones@desafiolatam.com</a>
-		</div>
-		<div class="col-md-3 col-sm-3">
-			<h5>Suscribete</h5>
-			<p>Lorem asidasdnas ask adjka sdaksdkaksd kas</p>
-			<div class="input-group mb-3">
-  				<input type="text" class="form-control" placeholder="Ingresa tu email.." aria-label="Recipient's username" aria-describedby="basic-addon2">
-  				<div class="input-group-append">
-    				<button class="btn btn-outline-secondary" type="button">Enviar</button>
-  				</div>
+	<div class="container">
+		<div class="row space-two">
+			<div class="col-md-3 col-sm-3 offset-md-3 offset-sm-3">
+				<h5>Contacto</h5>
+				<p><strong>Desafio Latam</strong><br>Ezequias Alliende 2361<br>P: +569 5117 7975</p>
+				<a href="http://www.gmail.com" target="_blank">inscripciones@desafiolatam.com</a>
 			</div>
-		</div>
-	</div>	
-	
-	<!-- Fifth Section -->
-	<div class="row">
-		<div class="col footer">
-			<div class="container">
-				<h5>DESAFIO LATAM 2018 - CURSO FULLSTACK G14</h5>
+			<div class="col-md-3 col-sm-3">
+				<h5>Suscribete</h5>
+				<p>Lorem asidasdnas ask adjka sdaksdkaksd kas</p>
+				<div class="input-group mb-3">
+	  				<input type="text" class="form-control" placeholder="Ingresa tu email.." aria-label="Recipient's username" aria-describedby="basic-addon2">
+	  				<div class="input-group-append">
+	    				<button class="btn btn-outline-secondary" type="button">Enviar</button>
+	  				</div>
+				</div>
 			</div>
 		</div>	
-	</div>	
+	</div>
+	
+	<!-- Footer -->
+	<div class="footer">
+		<div class="container">
+			<h5>DESAFIO LATAM 2018 - CURSO FULLSTACK G14</h5>
+		</div>
+	</div>
 
 	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
