--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 					<img src="images/latam_logo.png" width="100" height="30" alt="">
 				</a>
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-					<span class="navbar-toggler-icon"></span>
+					<span class="navbar-toggler-icon" style="background-color: white"></span>
 				</button>
 				<!-- Navegación -->
 				<div class="collapse navbar-collapse" id="navbarSupportedContent">
